--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
       font-size: 1.2em;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
       transition: background 0.3s ease;
+      display: inline-block;
+      max-width: 100%;
+      box-sizing: border-box;
+      word-wrap: break-word;
+      text-align: center;
     }
     .whatsapp a:hover {
       background: linear-gradient(135deg, #128C7E, #25D366);
